[gd_scene load_steps=21 format=2]

[ext_resource path="res://Jugador.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cancha.tscn" type="PackedScene" id=2]
[ext_resource path="res://viejo.gd" type="Script" id=3]
[ext_resource path="res://Pausa.tscn" type="PackedScene" id=4]
[ext_resource path="res://untitled-1.png" type="Texture" id=5]
[ext_resource path="res://Vecino2.gd" type="Script" id=6]
[ext_resource path="res://Tapia.gd" type="Script" id=7]
[ext_resource path="res://viejo-sheet.png" type="Texture" id=8]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=9]
[ext_resource path="res://musicacancha.tscn" type="PackedScene" id=11]
[ext_resource path="res://VideoPlayer.gd" type="Script" id=12]
[ext_resource path="res://Loop1-1.ogv" type="VideoStream" id=13]
[ext_resource path="res://Sprite-0002.png" type="Texture" id=14]
[ext_resource path="res://Frente_Sprite-sheet.png" type="Texture" id=15]
[ext_resource path="res://Frente_Sprite.gd" type="Script" id=16]

[sub_resource type="Animation" id=1]
resource_name = "viejo"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 6, 5, 4, 3, 2, 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "tapia"
length = 1.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 7, 6, 5, 4, 3, 2, 1 ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 29.2207
height = 57.3455

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 67.9345, 37.7632 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 64.7271, 59.522 )

[node name="NivelCancha" type="Node2D"]

[node name="Cancha" parent="." instance=ExtResource( 2 )]
position = Vector2( 723.854, 405.007 )
scale = Vector2( 1.50649, 0.836793 )

[node name="Sprite-0002" type="Sprite" parent="Cancha"]
position = Vector2( 348.229, 279.867 )
scale = Vector2( 2.43917, 2.98132 )
texture = ExtResource( 14 )

[node name="VideoPlayer" type="VideoPlayer" parent="Cancha"]
margin_left = -484.0
margin_top = -265.0
margin_right = 482.0
margin_bottom = 192.0
stream = ExtResource( 13 )
volume_db = -80.0
autoplay = true
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="viejo" type="Sprite" parent="Cancha"]
position = Vector2( 213.593, 269.634 )
scale = Vector2( 0.663795, 0.692355 )
texture = ExtResource( 8 )
vframes = 8
frame = 5
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cancha/viejo"]
anims/viejo = SubResource( 1 )

[node name="Frente_Sprite" type="Sprite" parent="Cancha"]
position = Vector2( -33.4945, 218.162 )
scale = Vector2( 0.380816, 0.355044 )
texture = ExtResource( 15 )
vframes = 9
frame = 2
script = ExtResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cancha/Frente_Sprite"]
anims/tapia = SubResource( 2 )

[node name="Jugador" parent="Cancha" instance=ExtResource( 1 )]
position = Vector2( -642.927, -368.317 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Cancha"]
position = Vector2( 214.496, 269.634 )
scale = Vector2( 0.663795, 0.692355 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cancha/StaticBody2D2"]
position = Vector2( 3.01477, 2.60181 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Cancha/StaticBody2D2"]
position = Vector2( -375.007, -78.4823 )
shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pausa" parent="CanvasLayer" instance=ExtResource( 4 )]
margin_left = 2.79895
margin_top = 11.4073
margin_right = 2.79895
margin_bottom = 11.4073

[node name="Tapia" type="Area2D" parent="."]
pause_mode = 2
position = Vector2( -1.67017, 1.67017 )
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tapia"]
position = Vector2( 673.169, 598.081 )
shape = SubResource( 4 )

[node name="TextureRect" type="TextureRect" parent="Tapia"]
margin_left = 482.331
margin_top = 650.363
margin_right = 862.331
margin_bottom = 782.363
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nombre" type="RichTextLabel" parent="Tapia"]
margin_left = 486.0
margin_top = 652.0
margin_right = 562.0
margin_bottom = 680.0
custom_fonts/normal_font = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogo" type="RichTextLabel" parent="Tapia"]
margin_left = 490.264
margin_top = 680.053
margin_right = 851.264
margin_bottom = 773.053
custom_fonts/normal_font = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Tapia"]

[node name="Vecino" type="Area2D" parent="."]
pause_mode = 2
position = Vector2( 3.01471, 4.52201 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vecino"]
position = Vector2( 1042.19, 643.019 )
shape = SubResource( 5 )

[node name="TextureRect" type="TextureRect" parent="Vecino"]
margin_left = 858.678
margin_top = 661.681
margin_right = 1235.68
margin_bottom = 794.681
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nombre" type="RichTextLabel" parent="Vecino"]
margin_left = 865.0
margin_top = 663.0
margin_right = 943.0
margin_bottom = 688.0
custom_fonts/normal_font = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogo" type="RichTextLabel" parent="Vecino"]
margin_left = 870.0
margin_top = 693.0
margin_right = 1224.0
margin_bottom = 785.0
custom_fonts/normal_font = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Vecino"]

[node name="AudioStreamPlayer" parent="." instance=ExtResource( 11 )]
[connection signal="body_entered" from="Tapia" to="Tapia" method="_on_Tapia_body_entered"]
[connection signal="body_entered" from="Tapia" to="Vecino" method="_on_Tapia_body_entered"]
[connection signal="body_exited" from="Tapia" to="Tapia" method="_on_Tapia_body_exited"]
[connection signal="body_entered" from="Vecino" to="Vecino" method="_on_Vecino_body_entered"]
[connection signal="body_exited" from="Vecino" to="Vecino" method="_on_Vecino_body_exited"]
